# IOC_Checker_Python

./: .coverage  .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  API_KEY_IMPLEMENTATION_SUMMARY.md  API_KEY_SETUP.md  BATCH_FIX_SUMMARY.md  DIALOG_DESIGN_GUIDELINES.md  DIALOG_ENHANCEMENT_SUMMARY.md  PROVIDER_SELECTION_COMPLETE.md  README.md  TEST_RESULTS.md  __init__.py  __main__.py  abuseipdb_api.py  api_key_store.py  async_cache.py  async_http.py  async_scan_test.py  cache.py  conftest.py  coverage.xml  debug_virustotal.py  debug_vt.py  demo_enhanced_dialogs.py  demo_fix.py  demo_per_provider_verdicts.py  demo_providers_button.py  dialog_templates.py  example_batch_usage.py  greynoise_api.py  gui_simulation_test.py  http_client.py  http_utils.py  ioc_checker.py  ioc_full_list.csv  ioc_gui_tk.py  ioc_gui_tk_fixed.py  ioc_gui_tk_working.py  (+59 more)
.github/workflows/: ci.yml
.trae/: launch.json  settings.json
CSV tests/: malicious_urls.csv
ioc_checker_old/: .env  CSV_TEMPLATE_GUIDE.md  README.md  demo_urls.csv  demo_urls_results.csv  ioc_checker.py  ioc_template.csv  ioc_template_results.csv
tests/: Malicious_IOCs.csv  batch_results_20250728_104424.csv  conftest.py  malicious-ipv4-with-activity_by_AhmedAli.csv  malicious_urls.csv  test_aggregate_verdict_mixed.py  test_analyze_ioc_types.py  test_api_key_lifecycle.py  test_api_key_persistence.py  test_api_key_store_gui.py  test_async_cache.py  test_async_cache_client_reset.py  test_async_cache_cross_loop.py  test_async_cache_extended.py  test_async_cache_multi_loop.py  test_async_cache_shutdown.py  test_async_scan.py  test_batch_concurrency.py  test_batch_processing.py  test_cache.py  test_cli_integration.py  test_cli_single.py  test_cross_platform.py  test_csv_batch.py  test_csv_export.py  test_detect.py  test_edge_cases.py  test_export_service.py  test_formatting.py  test_gui.py  test_gui_integration.py  test_gui_threading.py  test_imports_smoke.py  test_interface.py  test_ioc_types.py  test_ioc_types_ipv6.py  test_loader_hash_detection.py  test_loader_streaming.py  test_main.py  test_otx_url_support.py  (+18 more)
tests/csv_test/: File_Names.xlsx  File_Names_results.csv  full_urls.csv  malicious_urls_results.csv  malicious_urls_results.html  malicious_urls_results.json  malicious_urls_results.xlsx  ~$File_Names.xlsx
tests/extra/: test_cli_edge_cases.py  test_error_paths.py  test_final_coverage.py  test_gui_coverage.py  test_gui_minimal.py  test_gui_working.py  test_provider_timeouts.py
tests/gui/: test_csv_flow.py  test_csv_integration.py  test_progress_bar.py  test_provider_merge.py
tests/loader/: test_format_agnostic.py
tests/results/: test_csv_format.py  test_single_output.py
