[project]
name = "ioc-checker"
version = "0.1.0"
description = ""
authors = [
    { name = "Ibrahim", email = "ibrahim-ehab@live.com" }
]

# make the top-level .py files importable as a package
py-modules = ["ioc_checker", "ioc_types", "providers", "reports"]

readme = "README.md"
requires-python = ">=3.10,<3.14"  # Changed from >=3.11 to >=3.10

dependencies = [
    "aiohttp (>=3.12.13,<4.0.0)",
    "aiohttp-client-cache (>=0.13.0,<0.14.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "requests-cache (>=1.2.0,<2.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "regex (>=2024.11.6,<2025.0.0)",
    "ttkbootstrap (>=1.13.11,<2.0.0)",
    "aiolimiter (>=1.2.1,<2.0.0)",
    "sv-ttk (>=2.6.1,<3.0.0)",
    "pytest-asyncio (>=0.23.6,<1.0.0)",
    "tldextract (>=5.1.2,<6.0.0)",
    "filelock (>=3.16.1,<4.0.0)",
    "httpx (>=0.28.1,<1.0.0)",
    "httpx-cache (>=0.13.0,<1.0.0)",
    "pydantic (>=2.0.0,<3.0.0)",
    "pydantic-settings (>=2.0.0,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[tool.mypy]
strict = true

[project.scripts]
ioc-checker = "ioc_checker:main"
